--- a/data/template.html
+++ b/data/template.html
@@ -29,7 +29,7 @@
     		<span id="assemblyActual">0</span>/<span id="assemblyCount">0</span>
     	<a href="#" id="increaseAssembly" class="button white">&gt;</a>
     </span>
-	<a href="http://thingdoc.org/"><img src="html_data/logo120.png" id="logo"/></a>
+	<a href="https://github.com/josefprusa/ThingDoc/wiki"><img src="html_data/logo120.png" id="logo"/></a>
 	</div>
 
 
